After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698262 - Pressing enter in Enterprise login domain or user fields doesn't complete dialog
Pressing enter in Enterprise login domain or user fields doesn't complete dialog
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
3.10
Depends on:
Blocks:
 
 
Reported: 2013-04-18 07:54 UTC by Stef Walter
Modified: 2013-04-23 14:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: Pressing inter in 'Add Account' dialog completes (2.13 KB, patch)
2013-04-18 16:09 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-04-18 07:54:04 UTC
When correcting an incorrect field in the Enterprise Login dialog, one might be in the Domain or User fields and press <Enter> and expect the dialog to complete. It does not.

I'll attach a patch.

Discovered on this test day: https://fedoraproject.org/wiki/Test_Day:2013-04-18_FreeIPA
Comment 1 Stef Walter 2013-04-18 16:09:39 UTC
Created attachment 241836 [details] [review]
user-accounts: Pressing inter in 'Add Account' dialog completes

Fix various controls where pressing enter did nothing.
Comment 2 Stef Walter 2013-04-18 16:10:13 UTC
Tested on gnome-3-8, applies to master.
Comment 3 Bastien Nocera 2013-04-22 15:49:32 UTC
Review of attachment 241836 [details] [review]:

> Pressing inter in 'Add Account' dialog completes

"Enter" and I don't understand it.

"Make Enter work in the 'Add Account' dialogue"?

Looks good to commit after that.