user-accounts: Make Enter work in the 'Add Account' dialogue

Fix various controls where pressing enter did nothing.

https://bugzilla.gnome.org/show_bug.cgi?id=698262